--- a/MyWeatherApp/app/src/main/res/layout/item_list_forecast_first_big_item.xml
+++ b/MyWeatherApp/app/src/main/res/layout/item_list_forecast_first_big_item.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="240dp"
-    android:layout_margin="4dp"
-    app:cardBackgroundColor="@color/purple_500"
-    >
+    android:layout_margin="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
