--- a/MyWeatherApp/app/src/main/res/menu/fragment_details_menu.xml
+++ b/MyWeatherApp/app/src/main/res/menu/fragment_details_menu.xml
@@ -3,16 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/share"
+        android:icon="@drawable/ic_baseline_share_24_white"
+        android:title="@string/share_menu_title"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/settings"
         android:icon="@drawable/ic_baseline_settings_24_white"
         android:title="@string/settings_menu_title"
-        app:showAsAction="ifRoom"
-    />
-
-    <item
-        android:id="@+id/map_location"
-        android:title="@string/your_location_menu_title"
-        app:showAsAction="never"/>
-
-
+        app:showAsAction="ifRoom"/>
 </menu>
