--- a/WeatherForecast/app/src/main/res/layout/layout_location_permission.xml
+++ b/WeatherForecast/app/src/main/res/layout/layout_location_permission.xml
@@ -18,24 +18,6 @@
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textAlignment="center"/>
-
-    <Button
-        android:visibility="gone"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_location_permission"
-        android:id="@+id/button_grants_location_permission"
-        android:text="@string/label_button_loc_perm_grants"
-        android:layout_margin="12dp"/>
-
-    <Button
-        android:visibility="gone"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_location_permission"
-        android:id="@+id/button_denies_location_permission"
-        android:text="@string/label_button_loc_perm_denies"
-        android:layout_margin="12dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!-- TODO: Delete this layout completely-->
